src/test/testData/highlighting/undefinedVariable.mod
minimize <error descr="Undefined variable: 'undefinedVar'">undefinedVar</error>;
